debian/base/iptables-rules.txt
# Generated by iptables-save v1.4.14 on Tue Jun 14 06:11:50 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:DOCKER - [0:0]
-A INPUT -p icmp -m limit --limit 10/min --limit-burst 10 -j ACCEPT
-A INPUT -p tcp -m multiport --ports 22,53,80,10001,8090,8091 -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
-A OUTPUT -p icmp -m limit --limit 1/sec --limit-burst 1 -j ACCEPT
-A OUTPUT -p tcp -m multiport --ports 22,53,80,10001,8090,8091 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Tue Jun 14 06:11:50 2016
# Generated by iptables-save v1.4.14 on Tue Jun 14 06:11:50 2016
*nat
:PREROUTING ACCEPT [100:11268]
:INPUT ACCEPT [86:10272]
:OUTPUT ACCEPT [237:15022]
:POSTROUTING ACCEPT [181:11448]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
COMMIT
# Completed on Tue Jun 14 06:11:50 2016
